Botão redirecionamento e comentário de método map

--- a/src/app/modules/main/pages/home/home.component.html
+++ b/src/app/modules/main/pages/home/home.component.html
@@ -165,7 +165,7 @@
         burocracia e mais flexibilidade.
       </h5>
      
-      <button class="btn btn-md mt-4" style="color: white; background-color: #C30000;">Simular agora</button>
+      <button class="btn btn-md mt-4" style="color: white; background-color: #C30000;" (click)="simulateInvestment()">Simular agora</button>
     </div>
   </div>
 </div>
