--- a/src/app/modules/main/pages/home/home.component.html
+++ b/src/app/modules/main/pages/home/home.component.html
@@ -2,11 +2,9 @@
 
 <div class="first col-md-12">
   <div class="d-flex justify-content-center align-items-center">
-   
+    <div id="web">
+      <div class="d-flex justify-content-start align-items-center" style="height: 80vh; width: 60%; position: absolute; left: 50px;">
     
-      <div id="web">
-        <div class="d-flex justify-content-start align-items-center" style="height: 80vh; width: 60%; position: absolute; left: 50px;">
-      
         <form [formGroup]="propertySearchForm" (submit)="searchProperty()" class="d-flex flex-column flex-wrap align-items-center w-75">
           <div class="input-group w-75">
             <div class="search-form-field" style="width: 99.5%; border-radius: 10px 10px 0px 0px;">
@@ -65,17 +63,11 @@
             Buscar imóveis
           </button>
         </form>
+      </div>
+      <div class="banner-img w-100"></div>
     </div>
-    <div class="banner-img w-100"></div>
-    </div>
-    
-    
   </div>
 </div>
-
-
-  
-    
 
     <!-- MOBILE FORM -->
     
@@ -83,71 +75,71 @@
       <div id="findProperty" class="fourth col-md-12 p-5">
       <p class="title pb-3">Encontre um imóvel próximo de você!</p>
       <div class="d-flex flex-column align-items-center text-center">
-      <form [formGroup]="propertySearchForm" (submit)="searchProperty()" class="d-flex flex-column flex-wrap align-items-center w-100">
-        <div class="input-group w-100 mb-3">
-          <div class="search-form-field rounded-3 w-100">
-            <label class="form-label mt-2 pl-2" style="font-size: 14px;"><i class="fas fa-map-marker-alt"></i>&nbsp;Cidade</label>
-            <div class="d-flex flex-row align-items-center w-100">
-              <select formControlName="city" class="input-style form-control form-select" aria-label=".form-select-lg example">
-                <option value="">Todas</option>
-                <option *ngFor="let col of cities" value="{{col.name}}">{{col.name}}</option>
-              </select>
+        <form [formGroup]="propertySearchForm" (submit)="searchProperty()" class="d-flex flex-column flex-wrap align-items-center w-100">
+          <div class="input-group w-100 mb-3">
+            <div class="search-form-field rounded-3 w-100">
+              <label class="form-label mt-2 pl-2" style="font-size: 14px;"><i class="fas fa-map-marker-alt"></i>&nbsp;Cidade</label>
+              <div class="d-flex flex-row align-items-center w-100">
+                <select formControlName="city" class="input-style form-control form-select" aria-label=".form-select-lg example">
+                  <option value="">Todas</option>
+                  <option *ngFor="let col of cities" value="{{col.name}}">{{col.name}}</option>
+                </select>
+              </div>
             </div>
           </div>
+          <div class="input-group w-100">
+            <div class="search-form-field rounded-3 w-100 mb-3">
+              <label class="form-label mt-2 pl-2" style="font-size: 14px;"><i class="bi bi-house-fill"></i>&nbsp;Tipo do imóvel</label>
+              <div class="d-flex flex-row align-items-center w-100">
+                <select formControlName="typology" class="input-style form-control form-select" aria-label=".form-select-lg example">
+                  <option value="0" selected>Todos</option>
+                  <option *ngFor="let col of propertyTypes" value="{{col.id}}">{{col.name}}</option>
+                </select>
+              </div>
+            </div>
+            <div class="search-form-field rounded-3 w-100 mb-3">
+              <label class="form-label mt-2 pl-2" style="font-size: 14px;"><i class="bi bi-currency-dollar"></i>&nbsp;Imóvel até</label>
+              <input class="form-control input-style" formControlName="price"
+                matInput
+                type="text" 
+                prefix="R$ " 
+                mask="separator" 
+                thousandSeparator="." 
+                placeholder="Insira o valor" 
+                (keyup)="propertyPriceCurrencyMask($event.target)">
+            </div>
+            <div class="search-form-field flex-fill rounded-3">
+              <label class="form-label mt-2 pl-2" style="font-size: 14px;"><i class="fas fa-bed"></i>&nbsp;Quartos</label>
+              <div class="d-flex flex-row align-items-center w-100">
+                <select formControlName="rooms" class="input-style form-control form-select" aria-label=".form-select-lg example">
+                  <option value="1">1</option>
+                  <option value="2">2</option>
+                  <option value="3">3</option>
+                  <option value="4">4</option>
+                </select>
+              </div>
+            </div>
+            &nbsp;
+            &nbsp;
+            <div class="search-form-field flex-fill rounded-3">
+              <label class="form-label mt-2 pl-2" style="font-size: 14px;"><i class="bi bi-car-front-fill"></i>&nbsp;Vagas</label>
+              <div class="d-flex flex-row align-items-center w-100">
+                <select formControlName="parking_spot" class="input-style form-control form-select" aria-label=".form-select-lg example">
+                  <option value="" selected>0+</option>
+                  <option value="1">1</option>
+                  <option value="2">2</option>
+                  <option value="3">3</option>
+                </select>
+              </div>
+            </div>
+          </div>
+          <button type="submit" class="simple-elevated-red-button btn mt-5">
+            Buscar imóveis
+          </button>
+          </form>
         </div>
-        <div class="input-group w-100">
-          <div class="search-form-field rounded-3 w-100 mb-3">
-            <label class="form-label mt-2 pl-2" style="font-size: 14px;"><i class="bi bi-house-fill"></i>&nbsp;Tipo do imóvel</label>
-            <div class="d-flex flex-row align-items-center w-100">
-              <select formControlName="typology" class="input-style form-control form-select" aria-label=".form-select-lg example">
-                <option value="0" selected>Todos</option>
-                <option *ngFor="let col of propertyTypes" value="{{col.id}}">{{col.name}}</option>
-              </select>
-            </div>
-          </div>
-          <div class="search-form-field rounded-3 w-100 mb-3">
-            <label class="form-label mt-2 pl-2" style="font-size: 14px;"><i class="bi bi-currency-dollar"></i>&nbsp;Imóvel até</label>
-            <input class="form-control input-style" formControlName="price"
-              matInput
-              type="text" 
-              prefix="R$ " 
-              mask="separator" 
-              thousandSeparator="." 
-              placeholder="Insira o valor" 
-              (keyup)="propertyPriceCurrencyMask($event.target)">
-          </div>
-          <div class="search-form-field flex-fill rounded-3">
-            <label class="form-label mt-2 pl-2" style="font-size: 14px;"><i class="fas fa-bed"></i>&nbsp;Quartos</label>
-            <div class="d-flex flex-row align-items-center w-100">
-              <select formControlName="rooms" class="input-style form-control form-select" aria-label=".form-select-lg example">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-              </select>
-            </div>
-          </div>
-          &nbsp;
-          &nbsp;
-          <div class="search-form-field flex-fill rounded-3">
-            <label class="form-label mt-2 pl-2" style="font-size: 14px;"><i class="bi bi-car-front-fill"></i>&nbsp;Vagas</label>
-            <div class="d-flex flex-row align-items-center w-100">
-              <select formControlName="parking_spot" class="input-style form-control form-select" aria-label=".form-select-lg example">
-                <option value="" selected>0+</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-              </select>
-            </div>
-          </div>
-        </div>
-        <button type="submit" class="simple-elevated-red-button btn mt-5">
-          Buscar imóveis
-        </button>
-      </form>
+      </div>
     </div>
-  </div>
-</div>
 
 <div id="simulate" class="p-5" style="background-color: #245aa3;">
   <div class="row">
@@ -155,7 +147,7 @@
       <img class="grafico-img" src="../../../../../assets/img/grafico.png">
       <!-- <div class="grafico-img"></div> -->
     </div>
-    <div class="col-md-6 text-left" style="color: white;">
+    <div class="col-md-6 text-left mt-4" style="color: white;">
       <h1 class="fw-bold">
         O melhor lugar <br>
         para o seu <br>
