--- a/src/app/modules/main/pages/search-property/components/contact-modal/contact-modal.component.html
+++ b/src/app/modules/main/pages/search-property/components/contact-modal/contact-modal.component.html
@@ -48,7 +48,7 @@
             </div>
             
             <div class="m-3">
-              <label class="fs-6">Você será redirecionado(a) para o whatsapp de um dos nossos especialistas para que ele(a) responda suas dúvidas.</label>
+              <label class="fs-6">Você será redirecionado(a) para o whatsapp de um dos nossos especialistas para que ele(a) tire suas dúvidas.</label>
             </div>
    
             <div class="d-flex justify-content-end p-3">
