--- a/src/app/modules/main/pages/home/home.component.html
+++ b/src/app/modules/main/pages/home/home.component.html
@@ -210,12 +210,12 @@
 
       <div class="text-center">
         <span style="font-size: 14px; color: white; font-weight: bold;">Membros do Coren-RJ</span><br>
-        <button class="btn btn-sm fw-bold text-right mt-2" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
+        <button class="btn btn-sm fw-bold text-right mt-2" (click)="openLink()" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
       </div>
 
       <div class="text-center mt-4">
         <span style="font-size: 14px; color: white; font-weight: bold;">Colaborador Rede D'or - Público Geral</span><br>
-        <button class="btn btn-sm fw-bold text-right mt-2" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
+        <button class="btn btn-sm fw-bold text-right mt-2" (click)="openLink2()" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
       </div>
     </div>
   </div>
