--- a/src/app/modules/main/pages/search-property/search-property.component.html
+++ b/src/app/modules/main/pages/search-property/search-property.component.html
@@ -225,7 +225,7 @@
     
     <!-- RESULT -->
 
-    <app-search-result *ngIf="!gettingPropertiesList && propertiesList.length > 0" [propertiesList]="propertiesList" [filter]="filter" (property)="emitProperty($event)"></app-search-result>
+    <app-search-result *ngIf="!gettingPropertiesList && propertiesList.length != 0" [propertiesList]="propertiesList" [filter]="filter" (property)="emitProperty($event)"></app-search-result>
 
     <app-contact-modal [property]="property"></app-contact-modal>
     
@@ -246,48 +246,60 @@
   </div>
 </div>
 
-<div class="second col-md-12 p-4">
-  <div class="column text-center">
-    <p class="title">Salão de Imóveis</p>
-    <div class="d-flex felx-column flex-wrap justify-content-center p-4">
-      <div class="event-card-left"></div>
-      <div class="event-card-right">
-        <div class="d-flex flex-column p-4">
-          <div class="text-end">
-            <a href="#" class="btn p-0">
-              <p class="fw-bold">1/2<i class="bi bi-chevron-right"></i></p>
-            </a>
+<div class="text-center mt-5">
+  <p class="title">Salão de Imóveis</p>
+</div>
+
+<div id="estateHall" class="pt-5">
+  <div class="row" style="width: 100%; margin-left: 0px;">
+    <div class="col-md text-center p-0">
+      <img class="grafico-img" src="../../../../../assets/img/banner2_salaodeimoveis.png" style="width: 100%;">
+    </div>
+    <div class="col-md text-left p-4" style="color: white; background-color: #3B3C8B;">
+      <h4 class="fw-bold mt-4" style="color: #00DD81">
+        Salão de Imóveis - Rio de Janeiro 2023
+      </h4>
+      <h6 class="mt-4 fw-bold">Já conhece o Salão de Imóveis?</h6>
+
+      <h6 class="mt-2 fw-bold">
+        A iniciativa tem o objetivo de promover condições especiais de financiamento para os profissionais de Enfermagem realizarem o sonho da casa própria.
+      </h6>
+
+      <div class="mt-4">
+        <div class="d-flex">
+          <div class="mr-auto">
+            <i class="fas fa-map-marker-alt mt-2" style="font-size: 20px; color: #b93e4c;"></i>
           </div>
-          <p class="fw-bold fs-4 pb-2">Salão de Imóveis - Rio de Janeiro</p>
-          <p class="fw-bold fs-6 pb-5">Texto sobre o evento (criar um resumo sobre o evento).</p>
-          <div class="d-flex flex-row pb-4">
-            <img src="/assets/icons/Pin.png" style="height: 25px; width: 20px;">
-            <p style="line-height: 18px;">
-              <span class="fw-bold">
-                &nbsp;&nbsp;Via Parque Shopping - Estacionamento
-              </span>
-              <br>
-              <span class="small-sub-title fw-semibold">
-                Avenida Ayrton Senna, 3000, Barra da Tijuca, Rio de Janeiro, RJ
-              </span>
-            </p>
-          </div>
-          <div class="d-flex flex-row flex-wrap justify-content-evenly align-items-center">
-            <div class="event-card-right-section">
-              <button type="button" class="simple-elevated-red-button btn">
-                Saiba mais
-              </button>
-            </div>
-            <div class="event-card-right-section">
-              <img src="/assets/icons/calendar.png">
-              <p class="fs-6 fw-semibold">&nbsp;&nbsp;31/01 a 02/02</p>
-            </div>
-            <div class="event-card-right-section">
-              <img src="/assets/icons/clock.png">
-              <p class="fs-6 fw-semibold">&nbsp;&nbsp;10h às 22h</p>
-            </div>
+          <div style="font-size: 12px; line-height: 1.5; margin-left: 10px;">
+            <b>Via Parque Shopping - Estacionamento</b><br>
+            Avenida Ayrton Senna, 3000, Barra da Tijuca, Rio de Janeiro, RJ
           </div>
         </div>
+      </div>
+
+      <div class="mt-4">
+        <div class="d-flex">
+          <div class="mr-auto">
+            <img src="../../../../../assets/icons/calendar.png" style="width: 20px">
+            <span style="font-size: 12px; margin-left: 10px;">31/01 a 02/02</span> 
+          </div>
+          <div style="font-size: 16px; margin-left: 20px;">
+            <img src="../../../../../assets/icons/clock.png" style="width: 20px">
+            <span style="font-size: 12px; margin-left: 5px;">10h às 22h</span>
+          </div>
+        </div>
+      </div>
+
+      <hr>
+
+      <div class="text-center">
+        <span style="font-size: 14px; color: white; font-weight: bold;">Membros do Coren-RJ</span><br>
+        <button class="btn btn-sm fw-bold text-right mt-2" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
+      </div>
+
+      <div class="text-center mt-4">
+        <span style="font-size: 14px; color: white; font-weight: bold;">Colaborador Rede D'or - Público Geral</span><br>
+        <button class="btn btn-sm fw-bold text-right mt-2" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
       </div>
     </div>
   </div>
@@ -317,7 +329,7 @@
     <div class="col-md-4 col-12">
       <div class="d-flex justify-content-center">
         <div class="column p-4">
-          <div id="map"></div>
+          <!-- <div id="map"></div> -->
           <div class="d-flex flex-row text-start pt-4" style="max-width: 600px;">
             <img src="/assets/icons/adress-pin.png" style="height: 35px; width: 35px;">
             &nbsp;&nbsp;
@@ -326,7 +338,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-4 col-12">
+    <!-- <div class="col-md-4 col-12">
       <div class="column text-start p-4">
         <p class="sub-title">ASSINAR</p>
         <p class="sub-title">Receba notícias e atualizações sobre a Crediall por e-mail.</p>
@@ -337,6 +349,6 @@
           </div>
         </form>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
