--- a/src/app/modules/main/pages/home/home.component.html
+++ b/src/app/modules/main/pages/home/home.component.html
@@ -1,3 +1,4 @@
+<app-modal-salao-imoveis></app-modal-salao-imoveis>
 <app-app-nav-bar></app-app-nav-bar>
 
 <div class="first col-md-12">
@@ -295,5 +296,9 @@
         </form>
       </div>
     </div> -->
+    <button type="button" style="visibility: hidden;" data-bs-toggle="modal" data-bs-target="#exampleModal" id="botao-modal">
+  
+    </button>
   </div>
 </div>
+
