--- a/src/app/modules/main/pages/home/components/app-nav-bar/app-nav-bar.component.html
+++ b/src/app/modules/main/pages/home/components/app-nav-bar/app-nav-bar.component.html
@@ -48,7 +48,7 @@
       <div class="d-flex">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" (click)="scrollToFindProperty()" href="#" style="color: #00479C;">Encontre um Imóvel</a>
+            <a class="nav-link active" aria-current="page" (click)="scrollToFindProperty()" style="color: #00479C;">Encontre um Imóvel</a>
           </li>
           
           <li class="nav-item">
