--- a/src/app/modules/main/pages/search-property/components/search-result/search-result.component.html
+++ b/src/app/modules/main/pages/search-property/components/search-result/search-result.component.html
@@ -61,6 +61,8 @@
             <label class="form-label pt-1"><i class="fa fa-bed"></i>&nbsp;{{col.size.roomsCount}}</label>
             &nbsp;
             <label class="form-label pt-1"><i class="fa fa-car"></i>&nbsp;{{col.size.parkingSpotsCount}}</label>
+            &nbsp;
+            <label class="form-label pt-1"><b>{{col.size.area}}&nbsp;m&#x00B2;</b></label>
           </div>
           <div class="d-flex flex-row pb-2">
             <p style="line-height: 18px;">
