--- a/src/app/modules/main/pages/home/components/app-nav-bar/app-nav-bar.component.html
+++ b/src/app/modules/main/pages/home/components/app-nav-bar/app-nav-bar.component.html
@@ -1,37 +1,4 @@
-<!-- <nav class="navbar navbar-expand-lg p-3">
-  <div class="container-fluid">
-    <div class="d-flex">
-      <div class="mr-auto">
-        <a class="navbar-brand" href="#">
-          <img src="/assets/img/logo_crediall_complete.png" alt="Creadiall" style="height: 20px; width: 130px;">
-        </a>
-      </div>
-      
-      <div class="text-right">
-        <ul class="navbar-nav ">
-          <li class="nav-item">
-            <a class="nav-link" (click)="scrollToEstateHall()" style="cursor: pointer;">Salão de Imóveis</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" (click)="scrollToFindProperty()" style="cursor: pointer;">Encontre um Imóvel</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" (click)="scrollToPartners()" style="cursor: pointer;">Parceiros</a>
-          </li>
-        </ul>
-      </div>
-
-    </div>
-     
-       
-
-
-      
- 
-  </div>
-</nav> -->
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light p-3">
+<nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light p-3">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
       <img src="/assets/img/logo_crediall_complete.png" alt="Creadiall" style="height: 20px; width: 130px;">
@@ -41,18 +8,14 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <!-- <li class="nav-item"> -->
-          <!-- <a class="nav-link active" aria-current="page" href="#"></a> -->
-        <!-- </li> -->
       </ul>
       <div class="d-flex">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" (click)="scrollToFindProperty()" style="color: #00479C;">Encontre um Imóvel</a>
+            <a class="nav-link active" aria-current="page" (click)="scrollToFindProperty()" style="color: #00479C; cursor: pointer;">Encontre um Imóvel</a>
           </li>
           
           <li class="nav-item">
-            <!-- <a class="nav-link active" aria-current="page" style="color: #00479C; cursor: default;">•</a> -->
           </li>
 
           <li class="nav-item">
@@ -60,7 +23,6 @@
           </li>
           
           <li class="nav-item">
-            <!-- <a class="nav-link active" aria-current="page" style="color: #00479C; cursor: default;">•</a> -->
           </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#" style="color: #00479C;"></a>
