--- a/src/app/modules/main/pages/home/home.component.css
+++ b/src/app/modules/main/pages/home/home.component.css
@@ -1,3 +1,6 @@
+body {
+  margin-top: 1000px;
+}
 
 /* FIRST */
 
@@ -230,7 +233,7 @@ select {
   }
 }
 
-@media screen and (max-width: 980px) {
+@media screen and (max-width: 1294px) {
   #web {
     display: none;
   }
