--- a/src/app/modules/main/pages/simulate-investment/simulate-investment.component.html
+++ b/src/app/modules/main/pages/simulate-investment/simulate-investment.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex align-items-baseline justify-content-between p-3 w-100">
+<div id="nav-bar" class="d-flex align-items-baseline justify-content-between p-3 w-100">
   <a (click)="backToOrigin()" style="font-size: 25px; color:#012942; cursor: pointer;">
     <i class="fa fa-arrow-circle-left mb-4" aria-hidden="true"></i>
   </a>  
@@ -8,12 +8,12 @@
   <a class="navbar-brand" href="#"></a>
 </div>
 
-<div class="p-3" style="background-color: #01294200;">
-   <div class="d-flex flex-row flex-wrap justify-content -start">
+<div class="col-md-12 p-3">
+   <div class="d-flex flex-row flex-wrap justify-content-start">
     
     <!-- WEB -->
 
-    <div class="web col-md-3 col-12 p-3" >
+    <div class="web col-md-3 col-12 p-3">
       <form [formGroup]="simulatorForm" (submit)="validateSimulatorFormFields()">
         <div class="card shadow-sm border-0 p-3">
           <div class="search-form-field p-2">
