--- a/src/app/modules/main/pages/search-property/search-property.component.html
+++ b/src/app/modules/main/pages/search-property/search-property.component.html
@@ -260,11 +260,9 @@
         Salão de Imóveis - Rio de Janeiro 2023
       </h4>
       <h6 class="mt-4 fw-bold">Já conhece o Salão de Imóveis?</h6>
-
       <h6 class="mt-2 fw-bold">
         A iniciativa tem o objetivo de promover condições especiais de financiamento para os profissionais de Enfermagem realizarem o sonho da casa própria.
       </h6>
-
       <div class="mt-4">
         <div class="d-flex">
           <div class="mr-auto">
@@ -276,7 +274,6 @@
           </div>
         </div>
       </div>
-
       <div class="mt-4">
         <div class="d-flex">
           <div class="mr-auto">
@@ -289,17 +286,14 @@
           </div>
         </div>
       </div>
-
       <hr>
-
       <div class="text-center">
         <span style="font-size: 14px; color: white; font-weight: bold;">Membros do Coren-RJ</span><br>
-        <button class="btn btn-sm fw-bold text-right mt-2" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
+        <button class="btn btn-sm fw-bold text-right mt-2" (click)="openLink()" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
       </div>
-
       <div class="text-center mt-4">
         <span style="font-size: 14px; color: white; font-weight: bold;">Colaborador Rede D'or - Público Geral</span><br>
-        <button class="btn btn-sm fw-bold text-right mt-2" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
+        <button class="btn btn-sm fw-bold text-right mt-2" (click)="openLink2()" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
       </div>
     </div>
   </div>
@@ -311,15 +305,15 @@
       <div class="column p-4">
         <img class="pb-5" src="/assets/img/logo_crediall_complete.png">
         <div class="d-flex flex-row justify-content-center pb-5">
-          <a href="https://www.linkedin.com/in/crediall-solu%C3%A7%C3%B5es-em-cr%C3%A9dito-49a6681ba/?originalSubdomain=br">
+          <a (click)="linkdin()" style="cursor: pointer;">
             <img src="/assets/icons/linkdin.png">
           </a>
           &nbsp;&nbsp;&nbsp;
-          <a href="https://www.facebook.com/credialltechoficial">
+          <a (click)="facebook()" style="cursor: pointer;">
             <img src="/assets/icons/facebook.png">
           </a>
           &nbsp;&nbsp;&nbsp;
-          <a href="https://www.instagram.com/credialltechoficial/">
+          <a (click)="instagram()" style="cursor: pointer;">
             <img src="/assets/icons/instagram.png">
           </a>
         </div>
@@ -329,7 +323,6 @@
     <div class="col-md-4 col-12">
       <div class="d-flex justify-content-center">
         <div class="column p-4">
-          <!-- <div id="map"></div> -->
           <div class="d-flex flex-row text-start pt-4" style="max-width: 600px;">
             <img src="/assets/icons/adress-pin.png" style="height: 35px; width: 35px;">
             &nbsp;&nbsp;
@@ -338,17 +331,6 @@
         </div>
       </div>
     </div>
-    <!-- <div class="col-md-4 col-12">
-      <div class="column text-start p-4">
-        <p class="sub-title">ASSINAR</p>
-        <p class="sub-title">Receba notícias e atualizações sobre a Crediall por e-mail.</p>
-        <form>
-          <div class="input-group mb-3">
-            <input type="text" class="form-control border-dark">
-            <button class="btn simple-elevated-button" type="button">Assinar</button>
-          </div>
-        </form>
-      </div>
-    </div> -->
+    <button type="button" style="visibility: hidden;" data-bs-toggle="modal" data-bs-target="#exampleModal" id="botao-modal"></button>
   </div>
 </div>
