fix/property-area

--- a/src/app/modules/main/pages/search-property/search-property.component.html
+++ b/src/app/modules/main/pages/search-property/search-property.component.html
@@ -66,6 +66,9 @@
           <label class="form-label">A partir de</label>
           <div class="d-flex flex-row align-items-center w-100">
             <select formControlName="area" class="input-style form-control form-select" aria-label=".form-select-lg example" (change)="getPropertiesList()">
+              <option value="10">10 m&#x00B2;</option>
+              <option value="20">20 m&#x00B2;</option>
+              <option value="30">30 m&#x00B2;</option>
               <option value="40">40 m&#x00B2;</option>
               <option value="50">50 m&#x00B2;</option>
               <option value="60">60 m&#x00B2;</option>
@@ -173,6 +176,9 @@
           <label class="form-label">A partir de</label>
           <div class="d-flex flex-row align-items-center w-100">
             <select formControlName="area" class="input-style form-control form-select" aria-label=".form-select-lg example" (change)="getPropertiesList()">
+              <option value="10">10 m&#x00B2;</option>
+              <option value="20">20 m&#x00B2;</option>
+              <option value="30">30 m&#x00B2;</option>
               <option value="40">40 m&#x00B2;</option>
               <option value="50">50 m&#x00B2;</option>
               <option value="60">60 m&#x00B2;</option>
