--- a/src/app/modules/main/pages/home/home.component.html
+++ b/src/app/modules/main/pages/home/home.component.html
@@ -216,6 +216,12 @@
         <span style="font-size: 14px; color: white; font-weight: bold;">Colaborador Rede D'or - Público Geral</span><br>
         <button class="btn btn-sm fw-bold text-right mt-2" (click)="openLink2()" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
       </div>
+
+      <div class="text-center mt-4">
+        <span style="font-size: 14px; color: white; font-weight: bold;">Membros do CRC-RJ</span><br>
+        <button class="btn btn-sm fw-bold text-right mt-2" (click)="openLink3()" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
+      </div>
+
     </div>
   </div>
 </div>
@@ -225,9 +231,9 @@
     <div class="text-center mb-4">
       <p class="title">Realização</p>
 
-      <img class="pt-4" src="/assets/img/kreditos-imobi.png" style="width: 150px; margin-right: 20px;">
-      <img class="pt-4" src="/assets/img/logo_homer.png" style="width: 120px; margin-right: 20px;">
-      <img class="pt-4" src="/assets/img/logo_crediall_complete.png" style="width: 150px;">
+      <img class="m-4" src="/assets/img/kreditos-imobi.png" style="width: 150px; margin-right: 20px;">
+      <img class="m-4" src="/assets/img/logo_homer.png" style="width: 120px; margin-right: 20px;">
+      <img class="m-4" src="/assets/img/logo_crediall_complete.png" style="width: 150px;">
     </div>
 
     <hr class="hr-parceiros">
@@ -235,8 +241,9 @@
     <div class="text-center mt-4 mb-4">
       <p class="title">Participação</p>
 
-      <img class="pt-4" src="/assets/img/rede_dor.png" style="width: 150px; margin-right: 20px;">
-      <img class="pt-4" src="/assets/img/coren.png" style="width: 150px; margin-right: 20px;">
+      <img class="m-4" src="/assets/img/rede_dor.png" style="width: 150px; margin-right: 20px;">
+      <img class="m-4" src="/assets/img/coren.png" style="width: 150px; margin-right: 20px;">
+      <img class="m-4" src="/assets/img/crcrj.jpg" style="width: 150px; margin-right: 20px;">
     </div>
 
     <hr class="hr-parceiros">
