--- a/src/app/modules/main/pages/home/components/modal-salao-imoveis/modal-salao-imoveis.component.html
+++ b/src/app/modules/main/pages/home/components/modal-salao-imoveis/modal-salao-imoveis.component.html
@@ -55,6 +55,11 @@
                     <span style="font-size: 14px; color: white; font-weight: bold;">Colaborador Rede D'or - Público Geral</span><br>
                     <button class="btn btn-sm fw-bold text-right mt-2" (click)="openLink2()" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
                     </div>
+
+                    <div class="text-center mt-4">
+                    <span style="font-size: 14px; color: white; font-weight: bold;">Membros do CRC-RJ</span><br>
+                    <button class="btn btn-sm fw-bold text-right mt-2" (click)="openLink3()" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
+                    </div>
                 </div>
                 </div>
         </div>
