--- a/src/app/modules/main/pages/search-property/search-property.component.html
+++ b/src/app/modules/main/pages/search-property/search-property.component.html
@@ -316,8 +316,8 @@
         <button class="btn btn-sm fw-bold text-right mt-2" (click)="openLink2()" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
       </div>
       <div class="text-center mt-4">
-        <span style="font-size: 14px; color: white; font-weight: bold;">Membros do CRC-RJ</span><br>
-        <button class="btn btn-sm fw-bold text-right mt-2" (click)="openLink3()" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
+        <span style="font-size: 14px; color: white; font-weight: bold;">Membros do CRC-RJ - Público Geral</span><br>
+        <button class="btn btn-sm fw-bold text-right mt-2" (click)="openLink2()" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
       </div>
     </div>
   </div>
