--- a/src/app/modules/main/pages/home/home.component.html
+++ b/src/app/modules/main/pages/home/home.component.html
@@ -243,7 +243,7 @@
 
       <img class="m-4" src="/assets/img/rede_dor.png" style="width: 150px; margin-right: 20px;">
       <img class="m-4" src="/assets/img/coren.png" style="width: 150px; margin-right: 20px;">
-      <img class="m-4" src="/assets/img/crcrj.jpg" style="width: 150px; margin-right: 20px;">
+      <img class="m-4" src="/assets/img/crcrj.png" style="width: 150px; margin-right: 20px;">
     </div>
 
     <hr class="hr-parceiros">
