Remoção de negrito e ajustes de responsividade

--- a/src/app/modules/main/pages/home/home.component.css
+++ b/src/app/modules/main/pages/home/home.component.css
@@ -233,12 +233,16 @@ select {
   }
 }
 
-@media screen and (max-width: 1294px) {
+@media screen and (max-width: 1400px) {
   #web {
     display: none;
   }
 
   #mobile {
+    display: block;
+  }
+
+  #estateHall {
     display: block;
   }
 }
