--- a/src/app/modules/main/pages/home/home.component.html
+++ b/src/app/modules/main/pages/home/home.component.html
@@ -167,16 +167,16 @@
 
 <div id="estateHall" class="pt-5">
   <div class="row" style="width: 100%; margin-left: 0px;">
-    <div class="col-md text-center p-0">
+    <div class="col-md-5 text-center p-0">
       <img class="grafico-img" src="../../../../../assets/img/banner2_salaodeimoveis.png" style="width: 100%;">
     </div>
-    <div class="col-md text-left p-4" style="color: white; background-color: #3B3C8B;">
-      <h4 class="fw-bold mt-4" style="color: #00DD81">
+    <div class="col-md-7 text-left p-4" style="color: white; background-color: #3B3C8B;">
+      <h4 class="mt-4" style="color: #00DD81">
         Salão de Imóveis - Rio de Janeiro 2023
       </h4>
-      <h6 class="mt-4 fw-bold">Já conhece o Salão de Imóveis?</h6>
+      <h6 class="mt-4">Já conhece o Salão de Imóveis?</h6>
 
-      <h6 class="mt-2 fw-bold">
+      <h6 class="mt-2">
         A iniciativa tem o objetivo de promover condições especiais de financiamento para os profissionais de Enfermagem realizarem o sonho da casa própria.
       </h6>
 
@@ -186,7 +186,7 @@
             <i class="fas fa-map-marker-alt mt-2" style="font-size: 20px; color: #b93e4c;"></i>
           </div>
           <div style="font-size: 12px; line-height: 1.5; margin-left: 10px;">
-            <b>Via Parque Shopping - Estacionamento</b><br>
+            Via Parque Shopping - Estacionamento<br>
             Avenida Ayrton Senna, 3000, Barra da Tijuca, Rio de Janeiro, RJ
           </div>
         </div>
@@ -208,18 +208,18 @@
       <hr>
 
       <div class="text-center">
-        <span style="font-size: 14px; color: white; font-weight: bold;">Membros do Coren-RJ</span><br>
-        <button class="btn btn-sm fw-bold text-right mt-2" (click)="openLink()" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
+        <span style="font-size: 14px; color: white;">Membros do Coren-RJ</span><br>
+        <button class="btn btn-sm text-right mt-2" (click)="openLink()" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
       </div>
 
       <div class="text-center mt-4">
-        <span style="font-size: 14px; color: white; font-weight: bold;">Colaborador Rede D'or - Público Geral</span><br>
-        <button class="btn btn-sm fw-bold text-right mt-2" (click)="openLink2()" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
+        <span style="font-size: 14px; color: white;">Colaborador Rede D'or - Público Geral</span><br>
+        <button class="btn btn-sm text-right mt-2" (click)="openLink2()" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
       </div>
 
       <div class="text-center mt-4">
-        <span style="font-size: 14px; color: white; font-weight: bold;">Membros do CRC-RJ - Público Geral</span><br>
-        <button class="btn btn-sm fw-bold text-right mt-2" (click)="openLink2()" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
+        <span style="font-size: 14px; color: white;">Membros do CRC-RJ - Público Geral</span><br>
+        <button class="btn btn-sm text-right mt-2" (click)="openLink2()" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
       </div>
 
     </div>
