--- a/src/app/modules/main/pages/home/home.component.html
+++ b/src/app/modules/main/pages/home/home.component.html
@@ -208,6 +208,11 @@
       <hr>
 
       <div class="text-center">
+        <span style="font-size: 14px; color: white;">Inscreva-se gratuitamente</span><br>
+        <button class="btn btn-sm text-right mt-2" (click)="openLink2()" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
+      </div>
+
+      <!-- <div class="text-center">
         <span style="font-size: 14px; color: white;">Membros do Coren-RJ</span><br>
         <button class="btn btn-sm text-right mt-2" (click)="openLink()" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
       </div>
@@ -220,7 +225,7 @@
       <div class="text-center mt-4">
         <span style="font-size: 14px; color: white;">Membros do CRC-RJ - Público Geral</span><br>
         <button class="btn btn-sm text-right mt-2" (click)="openLink2()" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
-      </div>
+      </div> -->
 
     </div>
   </div>
@@ -236,17 +241,17 @@
       <img class="m-4" src="/assets/img/logo_crediall_complete.png" style="width: 150px;">
     </div>
 
-    <hr class="hr-parceiros">
+    <!-- <hr class="hr-parceiros"> -->
 
-    <div class="text-center mt-4 mb-4">
+    <!-- <div class="text-center mt-4 mb-4">
       <p class="title">Participação</p>
 
       <img class="m-4" src="/assets/img/rede_dor.png" style="width: 150px; margin-right: 20px;">
       <img class="m-4" src="/assets/img/coren.png" style="width: 150px; margin-right: 20px;">
       <img class="m-4" src="/assets/img/crcrj.png" style="width: 150px; margin-right: 20px;">
-    </div>
+    </div> -->
 
-    <hr class="hr-parceiros">
+    <!-- <hr class="hr-parceiros"> -->
 
     <div class="text-center mt-4">
       <p class="title mb-0">Apoio</p>
