--- a/src/app/modules/main/pages/home/components/modal-salao-imoveis/modal-salao-imoveis.component.html
+++ b/src/app/modules/main/pages/home/components/modal-salao-imoveis/modal-salao-imoveis.component.html
@@ -47,11 +47,16 @@
                     <hr>
             
                     <div class="text-center">
+                    <span style="font-size: 14px; color: white;">Inscreva-se gratuitamente</span><br>
+                    <button class="btn btn-sm text-right mt-2" (click)="openLink2()" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
+                    </div>
+
+                    <!-- <div class="text-center">
                     <span style="font-size: 14px; color: white;">Membros do Coren-RJ</span><br>
                     <button class="btn btn-sm text-right mt-2" (click)="openLink()" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
-                    </div>
+                    </div> -->
             
-                    <div class="text-center mt-4">
+                    <!-- <div class="text-center mt-4">
                     <span style="font-size: 14px; color: white;">Colaborador Rede D'or - Público Geral</span><br>
                     <button class="btn btn-sm text-right mt-2" (click)="openLink2()" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
                     </div>
@@ -59,7 +64,7 @@
                     <div class="text-center mt-4">
                     <span style="font-size: 14px; color: white;">Membros do CRC-RJ - Público Geral</span><br>
                     <button class="btn btn-sm text-right mt-2" (click)="openLink2()" style="background-color: #00DD81; color: #3B3C8B; width: 50%">Inscreva-se</button> 
-                    </div>
+                    </div> -->
                 </div>
                 </div>
         </div>
